--- a/tests/test.yml
+++ b/tests/test.yml
@@ -30,16 +30,18 @@
 
     # Workaround for selinux errors when using sqlite DB
     - name: Set permissive SElinux for httpd domain
-      command: semanage permissive -a httpd_t
-      when: ansible_os_family == "RedHat" and (ansible_selinux.mode is defined) and (ansible_selinux.mode == "enforcing")
-
+      selinux_permissive:
+        name: 'httpd_t'
+        permissive: True
+      when:
+        - ansible_selinux
+        - ansible_virtualization_type != 'docker'
   roles:
-
     - role: rabbitmq
       rabbitmq_tcp_address: 0.0.0.0
       rabbitmq_users:
-        - vhost   : /
-          user    : 'openstack'
+        - vhost: /
+          user: 'openstack'
           password: '0p3nst4ck'
 
     - role: mysql
@@ -90,7 +92,6 @@
       mysql_bind_address: 0.0.0.0
       mysql_innodb_file_per_table: 'innodb_file_per_table'
       mysql_daemon: 'mariadb'
-      #mysql_socket: '/var/lib/mysql/mysql.sock'
       mysql_log_error: '/var/log/mariadb/mariadb.log'
       mysql_syslog_tag: 'mariadb'
       mysql_pid_file: '/var/run/mariadb/mariadb.pid'
