--- a/tests/Dockerfile.ubuntu-16.04
+++ b/tests/Dockerfile.ubuntu-16.04
@@ -1,7 +1,11 @@
 FROM ubuntu:16.04
-
-# Python and sudo is required to run Ansible modules
 RUN apt-get update
-RUN apt-get install -y python sudo
 
-CMD [ "/lib/systemd/systemd" ]
+# Install Ansible
+RUN apt-get install -y software-properties-common git sudo
+RUN apt-add-repository -y ppa:ansible/ansible
+RUN apt-get update
+RUN apt-get install -y ansible
+
+# Install Ansible inventory file
+RUN echo "[local]\nlocalhost ansible_connection=local" > /etc/ansible/hosts
